Dissociate some CSS classes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -62,7 +62,7 @@
                 <strong>vont</strong> recruter en alternance</span>
             </h2>
             <div class="button-container">
-              <div class="loading">Chargement en cours</div>
+              <div class="loading-dotted">Chargement en cours</div>
             </div>
           </main>
           <footer>
