Multi-rome in search

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,8 +9,8 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 
-  <link href="./home.css" rel="stylesheet">
-  <link href="./global.css" rel="stylesheet">
+  <link href="/static/home.css" rel="stylesheet">
+  <link href="/static/global.css" rel="stylesheet">
 
   <!-- SEO Values -->
   <meta name="keywords" content="contrat offres alternance">
