--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,15 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
-
+  <!-- CSS -->
   <link href="/static/home.css" rel="stylesheet">
   <link href="/static/global.css" rel="stylesheet">
 
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
+
   <!-- SEO Values -->
   <meta name="keywords" content="contrat offres alternance">
-  <meta name="description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance !">
+  <meta name="description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les 42 000 entreprises qui vont recruter en alternance">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="https://labonnealternance/pole-emploi.fr">
+  <meta name="twitter:title" content="La Bonne Alternance">
+  <meta name="twitter:description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les 42 000 entreprises qui vont recruter en alternance">
+  <meta name="twitter:image:src" content="https://labonnealternance/pole-emploi.fr/static/img/fd-desktop.jpg">
+
+  <!-- Open Graph data for facebook -->
+  <meta property="og:site_name" content="La Bonne Alternance">
+  <meta property="og:title" content="La Bonne Alternance - Trouvez ici les 42 000 entreprises qui vont recruter en alternance">
+  <meta property="og:type" content="site">
+  <meta property="og:url" content="https://labonnealternance/pole-emploi.fr">
+  <meta property="og:image" content="https://labonnealternance/pole-emploi.fr/static/img/fd-desktop.jpg">
+  <meta property="og:description" content="Vous ne trouvez pas de contrat ou d'offres d'alternance ? Essayez La Bonne Alternance ! Trouvez ici les 42 000 entreprises qui vont recruter en alternance">
 
   <!--
       manifest.json provides metadata used when your web app is added to the
@@ -22,15 +38,6 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.png">
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   <title>La Bonne Alternance</title>
 </head>
 
@@ -55,7 +62,7 @@
             <h2 class="introduction">
               <span>Trouvez ici les
                 <strong>
-                  <span class="no-break-word bold">410 000</span> entreprises</strong>
+                  <span class="no-break-word bold">42 000</span> entreprises</strong>
               </span>
               <br>
               <span>qui
