Fix design bug in 50x and 40x pages on very large screen

--- a/frontend/public/error_page.html
+++ b/frontend/public/error_page.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
     <title>Site en maintenance - La Bonne Alternance</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -81,8 +81,8 @@
         }
 
         #not-found .text-container .images h1 {
-            text-align: left;
-            display: inline-block;
+            text-align: center;
+            display: block;
             line-height: 2.2em;
             margin-bottom: 20px;
         }
