Update how-it-works images

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -114,10 +114,10 @@
                           on s'occupe du reste !</p>
                       </div>
                       <div class="images">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-1.png" alt="">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-2.png" alt="">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-3.png" alt="">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-4.png" alt="">
+                        <img class="img-responsive" src="/static/img/how-it-works/step-1.jpg" alt="">
+                        <img class="img-responsive" src="/static/img/how-it-works/step-2.jpg" alt="">
+                        <img class="img-responsive" src="/static/img/how-it-works/step-3.jpg" alt="">
+                        <img class="img-responsive" src="/static/img/how-it-works/step-4.jpg" alt="">
                       </div>
                     </div>
                   </div>
