Update home loading page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -101,75 +101,73 @@
                 </div>
               </section>
               <section class="more">
-                <div class="max-size-1000">
-                  <div class="how-it-works">
-                    <h2>Comment ça marche ?</h2>
-                    <div>
-                      <div class="sr-only">
-                        <p>La Bonne Alternance utilise un algorithme vous propose des entreprises ayant déjà recruté en alternance
-                          dans le passé (sources : Pôle Emploi et le ministère du travail)</p>
-                        <p>Par conséquent, il ne s'agit pas d'offres en alternance et vous devez démarcher ces entreprises via
-                          des candidatures spontanées.</p>
-                        <p>Pour utiliser La Bonne Alternance, il suffit d'entrer le métier recherché et votre ville. Ensuite,
-                          on s'occupe du reste !</p>
-                      </div>
-                      <div class="images">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-1.jpg" alt="">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-2.jpg" alt="">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-3.jpg" alt="">
-                        <img class="img-responsive" src="/static/img/how-it-works/step-4.jpg" alt="">
-                      </div>
+                <div class="how-it-works max-size-1000">
+                  <h2>Comment ça marche ?</h2>
+                  <div>
+                    <div class="sr-only">
+                      <p>La Bonne Alternance utilise un algorithme vous propose des entreprises ayant déjà recruté en alternance
+                        dans le passé (sources : Pôle Emploi et le ministère du travail)</p>
+                      <p>Par conséquent, il ne s'agit pas d'offres en alternance et vous devez démarcher ces entreprises via
+                        des candidatures spontanées.</p>
+                      <p>Pour utiliser La Bonne Alternance, il suffit d'entrer le métier recherché et votre ville. Ensuite,
+                        on s'occupe du reste !</p>
+                    </div>
+                    <div class="images">
+                      <img class="img-responsive" src="/static/img/how-it-works/step-1.jpg" alt="">
+                      <img class="img-responsive" src="/static/img/how-it-works/step-2.jpg" alt="">
+                      <img class="img-responsive" src="/static/img/how-it-works/step-3.jpg" alt="">
+                      <img class="img-responsive" src="/static/img/how-it-works/step-4.jpg" alt="">
                     </div>
                   </div>
-                  <div class="who-we-are">
-                    <h2>Qui sommes-nous ?</h2>
-                    <div>
-                      <a class="logo-pe" href="https://www.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
-                        <img class="img-responsive" src="/static/img/logo/pole-emploi-couleur.svg" alt="La Bonne Alternance est un site de Pôle Emploi"
-                          title="La Bonne Alternance est un site de Pôle Emploi">
-                      </a>
-                      <p>Pôle Emploi innove et propose un service pour vous permettre de trouver plus facilement des entreprises
-                        proposant régulièrement des contrats en alternance. La Bonne Alternance est une startup interne de
-                        Pôle Emploi créée et développée par des conseillers.
-                        <br>
-                        <a title="En savoir plus sur les startups Pôle Emploi" href="/qui-sommes-nous">En savoir plus</a>
-                      </p>
-                    </div>
+                </div>
+                <div class="who-we-are max-size-1000">
+                  <h2>Qui sommes-nous ?</h2>
+                  <div>
+                    <a class="logo-pe" href="https://www.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
+                      <img class="img-responsive" src="/static/img/logo/pole-emploi-couleur.svg" alt="La Bonne Alternance est un site de Pôle Emploi"
+                        title="La Bonne Alternance est un site de Pôle Emploi">
+                    </a>
+                    <p>Pôle Emploi innove et propose un service pour vous permettre de trouver plus facilement des entreprises
+                      proposant régulièrement des contrats en alternance. La Bonne Alternance est une startup interne de
+                      Pôle Emploi créée et développée par des conseillers.
+                      <br>
+                      <a title="En savoir plus sur les startups Pôle Emploi" href="/qui-sommes-nous">En savoir plus</a>
+                    </p>
                   </div>
-                  <div id="other-startups" class="clearfix">
-                    <h2>D'autres services proposés par Pôle Emploi</h2>
-                    <div>
-                      <a href="https://labonneboite.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-boite">
-                        <img src="/static/img/startups/la_bonne_boite.png" alt="La Bonne Boite">
-                        <span>Trouvez les entreprises qui embauchent sans déposer d’offres d’emploi !</span>
-                      </a>
-                      <a href="https://labonneformation.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-formation">
-                        <img src="/static/img/startups/la_bonne_formation.jpg" alt="La Bonne Formation">
-                        <span>Trouvez une formation en fonction de votre profil ET du marché du travail.</span>
-                      </a>
-                      <a href="https://maintenant.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="maintenant">
-                        <img src="/static/img/startups/maintenant.png" alt="Maintenant">
-                        <span>Maintenant ! Trouver le bon job en moins de 5mn
-                          <strong>Pas de CV.</strong>
-                        </span>
-                      </a>
-                      <a href="https://memo.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="memo">
-                        <img src="/static/img/startups/memo.png" alt="Memo">
-                        <span>Maintenant ! Trouver le bon job en moins de 5mn
-                          <strong>Pas de CV.</strong>
-                        </span>
-                      </a>
-                      <a href="https://avril.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="avril">
-                        <img src="/static/img/startups/avril.svg" alt="Avril">
-                        <span>La VAE facile. Transformez votre expérience en diplôme reconnu.</span>
-                      </a>
-                      <a href="https://clara.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="clara">
-                        <img src="/static/img/startups/clara.svg" alt="Clara">
-                        <span>Vos aides en un clic. Découvrez les aides et mesures qui vont accélérer votre reprise d'emploi.</span>
-                      </a>
-                    </div>
+                </div>
+                <div id="other-startups" class="clearfix">
+                  <h2>D'autres services proposés par Pôle Emploi</h2>
+                  <div>
+                    <a href="https://labonneboite.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-boite">
+                      <img src="/static/img/startups/la_bonne_boite.png" alt="La Bonne Boite">
+                      <span>Trouvez les entreprises qui embauchent sans déposer d’offres d’emploi !</span>
+                    </a>
+                    <a href="https://labonneformation.pole-emploi.fr" target="_blank" rel="noopener noreferrer" class="la-bonne-formation">
+                      <img src="/static/img/startups/la_bonne_formation.jpg" alt="La Bonne Formation">
+                      <span>Trouvez une formation en fonction de votre profil ET du marché du travail.</span>
+                    </a>
+                    <a href="https://maintenant.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="maintenant">
+                      <img src="/static/img/startups/maintenant.png" alt="Maintenant">
+                      <span>Maintenant ! Trouver le bon job en moins de 5mn
+                        <strong>Pas de CV.</strong>
+                      </span>
+                    </a>
+                    <a href="https://memo.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="memo">
+                      <img src="/static/img/startups/memo.png" alt="Memo">
+                      <span>Mes candidatures en un clin d'oeil</span>
+                    </a>
+                    <a href="https://avril.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="avril">
+                      <img src="/static/img/startups/avril.svg" alt="Avril">
+                      <span>La VAE facile. Transformez votre expérience en diplôme reconnu.</span>
+                    </a>
+                    <a href="https://clara.pole-emploi.fr/" target="_blank" rel="noopener noreferrer" class="clara">
+                      <img src="/static/img/startups/clara.svg" alt="Clara">
+                      <span>Vos aides en un clic. Découvrez les aides et mesures qui vont accélérer votre reprise d'emploi.</span>
+                    </a>
                   </div>
-                  <footer id="global-footer" class="not-fixed">
+                </div>
+                <footer id="global-footer" class="not-fixed">
+                  <div class="links">
                     <ul class="list-unstyled inline-list">
                       <li>
                         <a href="/acces-recruteur">Accès recruteur</a>
@@ -183,14 +181,32 @@
                       <li class="small">
                         <a href="/conditions-generales-utilisation">CGU</a>
                       </li>
-                      <li class="small has-img">
+                    </ul>
+                  </div>
+                  <div class="flags">
+                    <ul class="list-unstyled inline-list">
+                      <li class="fse">
+                        <a href="http://www.fse.gouv.fr/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
+                          <img src="/static/img/logo/logo-FSE-color.svg" alt="Visiter le site du Fond Social Européen">
+                        </a>
+                      </li>
+                      <li>
                         <a href="https://europa.eu/european-union/index_fr" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
                           <img src="/static/img/logo/logo-ue.svg" alt="Visiter le site officiel de l'Union européenne">
                         </a>
                       </li>
+                      <li class="pole-emploi">
+                        <a href="https://www.pole-emploi.fr/accueil/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
+                          <img src="/static/img/logo/pole-emploi-couleur.svg" alt="La Bonne Alternance est un service de Pôle Emploi">
+                        </a>
+                      </li>
+                      <li class="fse-text">
+                        <p>Ce dispositif est cofinancé par le Fond Social Européen dans le cadre du Programme opérationnel national
+                          "emploi et inclusion" 2014-2020</p>
+                      </li>
                     </ul>
-                  </footer>
-                </div>
+                  </div>
+                </footer>
               </section>
             </main>
           </div>
