Change home / splash screen texts

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -67,8 +67,8 @@
                       <span class="no-break-word bold">42 000</span> entreprises</strong>
                   </span>
                   <br>
-                  <span>qui
-                    <strong>vont</strong> recruter en alternance</span>
+                  <span>qui recrutent
+                    <strong>régulièrement</strong> en alternance</span>
                 </h2>
                 <div class="button-container">
                   <div class="loading-dotted">Chargement en cours</div>
