Update <title> tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -38,7 +38,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.png">
-  <title>La Bonne Alternance</title>
+  <title>Le site des entreprises qui recrutent en alternance | La Bonne Alternance</title>
 </head>
 
 <body>
