--- a/frontend/public/error_page.html
+++ b/frontend/public/error_page.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
+    <!-- Meta SEO -->
+    <meta id="robots-meta" name="robots" content="noindex, follow">
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 </head>
