--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
 
+  <!-- Meta SEO -->
+  <meta id="robots-meta" name="robots" content="index, follow">
+
   <!-- CSS -->
   <link href="./home.css" rel="stylesheet">
   <link href="./global.css" rel="stylesheet">
