--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -108,17 +108,18 @@
                   <h2>Comment ça marche ?</h2>
                   <div>
                     <div class="text">
-                      <p>7 employeurs sur 10 recrutent sans déposer d’offres d’emploi. Il est donc essentiel dans votre recherche
-                        de proposer votre candidature à des entreprises n’ayant pas forcément déposées d’offres d’emploi
-                        en alternance.</p>
+                      <p>7 employeurs sur 10 recrutent sans déposer d’offre d’emploi. Il est donc essentiel dans votre recherche
+                        de proposer votre candidature à des entreprises n’ayant pas forcément déposé d’offre d’emploi en
+                        alternance.</p>
                       <p>Notre algorithme La Bonne Alternance analyse les offres et les recrutements des 5 dernières années
-                        pour vous proposer les entreprises qui recrutent régulièrement en alternance.</p>
-                      <p>Pour une meilleur lisibilité les résultats sont affichés sur une carte et en liste. Vous pouvez affiner
-                        la liste les entreprises par taille, métier et domaine . En cliquant sur une entreprise vous accédez
-                        à ses données clés, à des conseils pour postuler ainsi qu'à ses coordonnées.</p>
+                        pour vous proposer les entreprises qui recrutent régulièrement en alternance (contrat d'apprentissage
+                        ou contrat de professionalisation).</p>
+                      <p>Pour une meilleure lisibilité, les résultats sont affichés sur une carte et en liste. Vous pouvez affiner
+                        la liste des entreprises par taille, métier et domaine. En cliquant sur une entreprise, vous accédez
+                        à ses données-clés, à ses coordonnées ainsi qu'à des conseils pour postuler.</p>
                       <p>
-                        <strong>Maximiser vos chances !</strong> Postulez auprès des entreprises qui recrutent régulièrement en alternance
-                        sans forcément avoir déposé d’offres. C’est parti !</p>
+                        <strong>Maximisez vos chances !</strong> Postulez auprès des entreprises qui recrutent régulièrement en alternance
+                        sans forcément avoir déposé d’offre. C’est parti !</p>
                     </div>
                     <div class="images">
                       <img class="img-responsive" src="/static/img/how-it-works/step-1.jpg" alt="">
@@ -136,8 +137,7 @@
                         title="La Bonne Alternance est un site de Pôle Emploi">
                     </a>
                     <p>Pôle emploi innove et propose un service exclusif pour vous permettre de trouver plus facilement des
-                      entreprises recrutant régulièrement en contrat d’alternance sans avoir forcément déposées d’offres
-                      d’emploi.
+                      entreprises recrutant régulièrement en contrat d’alternance sans avoir forcément déposé d’offre d’emploi.
                       <br>
                       <a title="En savoir plus sur les startups Pôle Emploi" href="/qui-sommes-nous">En savoir plus</a>
                     </p>
