Misspell of profesionnalisation

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -113,7 +113,7 @@
                         alternance.</p>
                       <p>Notre algorithme La Bonne Alternance analyse les offres et les recrutements des 5 dernières années
                         pour vous proposer les entreprises qui recrutent régulièrement en alternance (contrat d'apprentissage
-                        ou contrat de professionalisation).</p>
+                        ou contrat de professionnalisation).</p>
                       <p>Pour une meilleure lisibilité, les résultats sont affichés sur une carte et en liste. Vous pouvez affiner
                         la liste des entreprises par taille, métier et domaine. En cliquant sur une entreprise, vous accédez
                         à ses données-clés, à ses coordonnées ainsi qu'à des conseils pour postuler.</p>
