Correct (again) misspell on home page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -111,8 +111,8 @@
                   <h2>Comment ça marche ?</h2>
                   <div>
                     <div class="text">
-                      <p>7 employeurs sur 10 recrutent sans déposer d’offre d’emploi. Il est donc essentiel dans votre recherche
-                        de proposer votre candidature à des entreprises n’ayant pas forcément déposé d’offre d’emploi en
+                      <p>7 employeurs sur 10 recrutent sans déposer d’offres d’emploi. Il est donc essentiel dans votre recherche
+                        de proposer votre candidature à des entreprises n’ayant pas forcément déposé d’offres d’emploi en
                         alternance.</p>
                       <p>Notre algorithme La Bonne Alternance analyse les offres et les recrutements des 5 dernières années
                         pour vous proposer les entreprises qui recrutent régulièrement en alternance (contrat d'apprentissage
@@ -122,7 +122,7 @@
                         à ses données-clés, à ses coordonnées ainsi qu'à des conseils pour postuler.</p>
                       <p>
                         <strong>Maximisez vos chances !</strong> Postulez auprès des entreprises qui recrutent régulièrement en alternance
-                        sans forcément avoir déposé d’offre. C’est parti !</p>
+                        sans forcément avoir déposé d’offres. C’est parti !</p>
                     </div>
                   </div>
                 </div>
@@ -134,7 +134,7 @@
                         title="La Bonne Alternance est un site de Pôle Emploi">
                     </a>
                     <p>Pôle emploi innove et propose un service exclusif pour vous permettre de trouver plus facilement des
-                      entreprises recrutant régulièrement en contrat d’alternance sans avoir forcément déposé d’offre d’emploi.
+                      entreprises recrutant régulièrement en contrat d’alternance sans avoir forcément déposé d’offres d’emploi.
                       <br>
                       <a title="En savoir plus sur les startups Pôle Emploi" href="/qui-sommes-nous">En savoir plus</a>
                     </p>
