Better display of the home page on IE11

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -94,7 +94,7 @@
                         <img src="/static/img/logo/logo-ue.svg" alt="Visiter le site officiel de l'Union européenne">
                       </a>
                     </li>
-                    <li>
+                    <li class="pole-emploi">
                       <a href="https://www.pole-emploi.fr/accueil/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
                         <img src="/static/img/logo/pole-emploi-couleur.svg" alt="La Bonne Alternance est un service de Pôle Emploi">
                       </a>
