Server-size render of page title

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,7 +41,7 @@
   -->
   <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.png">
-  <title>Le site des entreprises qui recrutent en alternance | La Bonne Alternance</title>
+  <title>{{ title }}</title>
 
   <!-- Raven for Sentry -->
   <script src="https://cdn.ravenjs.com/3.24.1/raven.min.js" crossorigin="anonymous"></script>
