Fix typo in FSE message

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -103,7 +103,7 @@
                   <ul class="list-unstyled inline-list">
                     <li class="fse">
                       <a href="http://www.fse.gouv.fr/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
-                        <img src="/static/img/logo/logo-FSE-color.svg" alt="Visiter le site du Fond Social Européen">
+                        <img src="/static/img/logo/logo-FSE-color.svg" alt="Visiter le site du Fonds Social Européen">
                       </a>
                     </li>
                     <li>
@@ -117,7 +117,7 @@
                       </a>
                     </li>
                     <li class="fse-text">
-                      <p>Ce dispositif est cofinancé par le Fond Social Européen dans le cadre du Programme opérationnel national
+                      <p>Ce dispositif est cofinancé par le Fonds Social Européen dans le cadre du Programme opérationnel national
                         "emploi et inclusion" 2014-2020</p>
                     </li>
                   </ul>
@@ -242,7 +242,7 @@
                     <ul class="list-unstyled inline-list">
                       <li class="fse">
                         <a href="http://www.fse.gouv.fr/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre">
-                          <img src="/static/img/logo/logo-FSE-color.svg" alt="Visiter le site du Fond Social Européen">
+                          <img src="/static/img/logo/logo-FSE-color.svg" alt="Visiter le site du Fonds Social Européen">
                         </a>
                       </li>
                       <li>
@@ -256,7 +256,7 @@
                         </a>
                       </li>
                       <li class="fse-text">
-                        <p>Ce dispositif est cofinancé par le Fond Social Européen dans le cadre du Programme opérationnel national
+                        <p>Ce dispositif est cofinancé par le Fonds Social Européen dans le cadre du Programme opérationnel national
                           "emploi et inclusion" 2014-2020</p>
                       </li>
                     </ul>
