--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -85,7 +85,7 @@
                 <div class="button-container">
                   <div class="loading-dotted">Chargement en cours</div>
                 </div>
-                <div class="recruiter"><a href="/acces-recruteur">Accès recruteur</a></div>
+                <div class="recruiter"><a href="https://labonneboite.pole-emploi.fr/informations-entreprise?origin=labonnealternance">Accès recruteur</a></div>
                 <div class="footer">
                   <ul class="list-unstyled inline-list">
                     <li class="fse"><a href="http://www.fse.gouv.fr/" target="_blank" rel="noopener noreferrer" title="Ouverture dans une nouvelle fenêtre"><img
@@ -166,7 +166,7 @@
                 <footer id="global-footer" class="not-fixed">
                   <div class="links">
                     <ul class="list-unstyled inline-list">
-                      <li><a href="/acces-recruteur">Accès recruteur</a></li>
+                      <li><a href="https://labonneboite.pole-emploi.fr/informations-entreprise?origin=labonnealternance">Accès recruteur</a></li>
                       <li><a href="/qui-sommes-nous">Qui sommes-nous ?</a></li>
                       <li class="small"><button title="Consulter notre politique sur les données personnelles">RGPD</button></li>
                       <li class="small"><a href="/faq">FAQ</a></li>
