--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,6 +46,49 @@
   <!-- Raven for Sentry -->
   <script src="https://cdn.ravenjs.com/3.24.1/raven.min.js" crossorigin="anonymous"></script>
 
+  <!-- Tag for Adword-->
+    <!-- Global site tag (gtag.js) - Google Ads: 963904050 -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-963904050"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-963904050');
+    </script>
+
+    <!-- Event snippet for NEW - LBA - Tag Bouton - Afficher les coordonnées conversion page. In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') { window.location = url; }
+        };
+
+        gtag('event', 'conversion', {
+            'send_to': 'AW-963904050/ZFjmCM7huYkBELKE0MsD',
+            'transaction_id': '',
+            'event_callback': callback
+        });
+        return false;
+      }
+      </script>
+
+    <!-- Event snippet for NEW - LBA - Tag Bouton - Fiche entreprise conversion page. In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') { window.location = url; }
+        };
+
+        gtag('event', 'conversion', {
+            'send_to': 'AW-963904050/rYLyCIWAsokBELKE0MsD',
+            'transaction_id': '',
+            'event_callback': callback
+        });
+        return false;
+      }
+    </script>
+
   <!-- For IE (not Edge), we include a polyfill to support recent JS functions -->
   <script type="text/javascript">
     var ua = window.navigator.userAgent;
