Add css for home page  from static/ folder instead of relative path

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,9 @@
   <!-- Meta SEO -->
   <meta id="robots-meta" name="robots" content="index, follow">
 
-  <!-- Google Font -->
+  <!-- CSS -->
+  <link href="/static/home.css" rel="stylesheet">
+  <link href="/static/global.css" rel="stylesheet">  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 
   <!-- SEO Values -->
