Avoid 404 when integrating home.css and global.css

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,8 +10,8 @@
   <meta id="robots-meta" name="robots" content="index, follow">
 
   <!-- CSS -->
-  <link href="/static/home.css" rel="stylesheet">
-  <link href="/static/global.css" rel="stylesheet">  <!-- Google Font -->
+  <link href="/home.css" rel="stylesheet">
+  <link href="/global.css" rel="stylesheet">  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
 
   <!-- SEO Values -->
